# SCIO-Bench

./: .gitignore  LICENSE  README.md  SCIO_Research_Framework.md  contoh_proposal_lolos_pendanaan.md  ex.md  implementation_plan.md  panduan_program_pembinaan_mahasiswa_wirausaha_tahun_2026_1771403502.md  pyproject.toml  repomix-output.md  requirements.txt  research_report.md
.kilo/: kilo.json
.kilo/agents/: code-skeptic.md
.kilo/plans/: repository-improvement.md
notebooks/: scio_anomaly_benchmark.ipynb
src/: __init__.py  config.py
src/data/: __init__.py  anomaly_injection.py  augmentation.py  download.py  feature_engineering.py  preprocess.py
src/evaluation/: __init__.py  edge_profiling.py  metrics.py  statistical_tests.py
src/models/: __init__.py  classical_ml.py  hierarchical_l2.py  isolation_forest.py  l2_classifier.py  lof.py  lstm_autoencoder.py  rule_based.py
src/visualization/: __init__.py  plots.py
src/xai/: __init__.py  reconstruction_analysis.py  shap_analysis.py
tests/: __init__.py  test_anomaly_injection.py  test_augmentation.py  test_classical_ml.py  test_edge_profiling.py  test_feature_engineering.py  test_l2_classifier.py  test_lstm_autoencoder.py  test_metrics.py  test_pipeline.py  test_plots.py  test_preprocess.py  test_rule_based.py  test_statistical_tests.py  test_xai.py
