[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scio-bench"
version = "1.0.0"
description = "A Labeled Benchmark Dataset and Comparative Study for Anomaly Detection in Off-Grid Renewable Energy IoT Monitoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Karel Tsalasatir Riyan"},
    {name = "Muhammad Azka Mauzaky Setyoko"},
    {name = "Ihya Ulumudin"},
]
keywords = ["anomaly-detection", "iot", "solar", "renewable-energy", "benchmark"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "shap>=0.44.0",
    "scipy>=1.12.0",
    "imbalanced-learn>=0.12.0",
    "joblib>=1.3.0",
    "kaggle>=1.6.0",
    "pyod>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/karelriyan/SCIO-Bench"
Repository = "https://github.com/karelriyan/SCIO-Bench.git"
Issues = "https://github.com/karelriyan/SCIO-Bench/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long — handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
